--- a/Rest/package.json
+++ b/Rest/package.json
@@ -5,7 +5,10 @@
   "main": "main.ts",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch main.ts"
+    "dev": "tsx watch main.ts",
+    "test": "npx vitest --run test/router/user.route.test.ts",
+    "coverage": "vitest run --coverage",
+    "test:run": "vitest --run"
   },
   "keywords": [],
   "author": "Daniel Rojas",
@@ -15,16 +18,19 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.6",
+    "@types/supertest": "^6.0.3",
     "@types/validator": "^13.12.2",
     "dotenv": "^16.4.7",
+    "supertest": "^7.1.1",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.0",
+    "k6": "^0.0.0",
     "nanoid": "^5.1.5",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
